[package]
name = "steamworksjs"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.13.1", features = ["tokio_rt", "napi6", "serde-json"] }
napi-derive = "2.13.0"
lazy_static = "1"
tokio = { version = "1", features = ["sync", "time"] }
steamworks = { git = "https://github.com/SteamAchievementNotifier/san_steamworks-rs.git", features = ["serde"] }
serde = "1"
serde_json = "1"
glob = "0.3.1"
process_alive = "0.1.1"
regex = "1.10.4"
fern = "0.6.2"
log = "0.4.21"
chrono = "0.4.38"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
